# howigotpwned

./: .envrc  .envrc.template  .gitignore  .pre-commit-config.yaml  .sops.yaml  CHANGELOG.md  Dockerfile  README.md  Untitled.ipynb  dagster.yaml.dev  devshell.toml  flake.nix  poc.ipynb  poking.ipynb  pyproject.toml  setup.sh  test_pyiceberg.ipynb  testing_s3_dagster_api.ipynb  to_parquet.py
.github/workflows/: build-n-push.yaml  bump.yaml  cd.yaml  ci.yaml
dagster_home/: dagster.yaml
dagster_project/: __init__.py  assets.py  constants.py  definitions.py  jobs.py  k8s_config.py  partitions.py  resources.py  schedules.py  schemas.py
dagster_project/assets/: assets.py  checks.py
dagster_project/dagster_home/: dagster.yaml
dagster_project/resources/: __init__.py
dagster_project/utils/: __init__.py  environment.py  iceberg_retry.py  passwords.py  s3_utils.py  unpack.py  uploader.py
data_sources/: README.md  pokemon.py
dlt_sources/: filesystem_pipeline.py
dlt_sources/.dlt/: .sources
dlt_sources/filesystem/: __init__.py  readers.py
gotdata-demo/: nessie-branches-demo.ipynb
harlequin/: .envrc  devshell.toml  flake.nix  pyproject.toml
secrets/: howigotpwned.env
throw-away-scripts/: extract.py  poking.ipynb  test_pyiceberg.ipynb
