[tool.poetry]
name = "leaks"
version = "0.1.0"
description = ""
authors = ["Alexander Reinthal <alexander.reinthal@knowit.se>"]
readme = "README.md"
package-mode = false

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I"]

# Never enforce `E501` (line length violations).
# ignore = ["E501"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Ignore `E402` (import violations) in a/nix/store/lrg4fqp6c2sswas4g2j75mlxwyns6rmk-python3-3.12.4-env/lib/python3.12/site-packages/dagster_webserver/nix/store/lrg4fqp6c2sswas4g2j75mlxwyns6rmk-python3-3.12.4-env/lib/python3.12/site-packages/dagster_webserverll `__init__.py` files, and in `path/to/file.py`.

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true
[per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.poetry.dependencies]
python = "~3.12"
dagster = "^1.8.0"
requests = "^2.32.3"
poetry-dotenv-plugin = "^0.1.0"

dagster-spark = "^0.24.2"
dagster-pyspark = "^0.24.2"
dagster-aws = "^0.24.2"
dlt = {extras = ["filesystem"], version = "^0.5.4"}
openpyxl = "^3.1.5"
[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.3"
ipython = "^8.18.0"
commitizen = "^3.27.0"
pre-commit = "^3.7.1"
dagster-webserver = "^1.8.0"

pytest = "^8.3.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "dagster_project"
