[tool.poetry]
name = "howigotpwned"
version = "1.2.1"
description = ""
authors = ["kog <kognitiva@pm.me>"]
readme = "README.md"
package-mode = false

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
lint.select = ["E", "F", "B", "I"]

# Never enforce `E501` (line length violations).
# ignore = ["E501"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
lint.unfixable = ["B"]

# Ignore `E402` (import violations) in a/nix/store/lrg4fqp6c2sswas4g2j75mlxwyns6rmk-python3-3.12.4-env/lib/python3.12/site-packages/dagster_webserver/nix/store/lrg4fqp6c2sswas4g2j75mlxwyns6rmk-python3-3.12.4-env/lib/python3.12/site-packages/dagster_webserverll `__init__.py` files, and in `path/to/file.py`.


[per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.poetry.dependencies]
python = "~3.12"
dagster = "^1.8.0"
requests = "^2.32.3"
poetry-dotenv-plugin = "^0.1.0"

dagster-spark = "^0.24.2"
dagster-pyspark = "^0.24.2"
dagster-aws = "^0.24.2"
dlt = { extras = ["filesystem"], version = "^1.0.0" }
openpyxl = "^3.1.5"
python-magic = "^0.4.27"
patool = "^2.4.0"
polars = "^1.6.0"
duckdb = "^1.0.0"

pynessie = "^0.67.0"
dagster-k8s = "^0.24.12"
dagster-postgres = "^0.24.13"
pyiceberg = {extras = ["duckdb"], version = "^0.7.1"}
pyarrow = "~17.0.0"
elasticsearch = "^8.16.0"
[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.3"
ipython = "^8.18.0"
commitizen = "^3.27.0"
pre-commit = "^3.7.1"
dagster-webserver = "^1.8.0"

pytest = "^8.3.2"
minio = "^7.2.8"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

harlequin-trino = "^0.1.3"
[tool.poetry.group.test.dependencies]
ruff = "~0.0.270"
black = "~23.12.0"
pytest = "^8.3.2"
pytest-cov = "~4.1.0"
sqlfluff = "~2.1.1"
sqlfluff-templater-dbt = "~2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "dagster_project"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
